# mecaros

./: README.md  runPublisher.sh  runPublisher.sh~  runSerialConnection.sh  sniffChatter.sh
MotorComm/: MotorComm.ino
publisher/devel/: .catkin  .rosinstall  setup.sh
publisher/devel/lib/pkgconfig/: publisher.pc
publisher/devel/lib/publisher/: pubvel  subpos
publisher/devel/share/publisher/cmake/: publisherConfig.cmake
publisher/src/publisher/: CMakeLists.txt  pubvel.cpp  subpos.cpp
ros2/: ros2.ino
